added material design

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,16 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h4>
-    Welcome to {{title}}!
-  </h4>
-</div>
 
+<md-toolbar color="primary">
+
+  <span>ToDo List</span>
+  <!--<span class="example-spacer"></span>-->
+  <!--<button md-button [mdMenuTriggerFor]="appMenu"><md-icon>menu</md-icon> Menu</button>-->
+
+</md-toolbar>
+
+<!--<md-menu #appMenu="mdMenu">-->
+  <!--<button md-menu-item> Settings </button>-->
+  <!--<button md-menu-item> Help </button>-->
+<!--</md-menu>-->
 <app-todo></app-todo>
 
