--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
-<md-toolbar color="primary">
+<md-toolbar>
+  <span style="align-content: center;    margin: auto;">Todo App</span>
 
-  <span>ToDo List</span>
   <!--<span class="example-spacer"></span>-->
   <!--<button md-button [mdMenuTriggerFor]="appMenu"><md-icon>menu</md-icon> Menu</button>-->
 
